# 3DEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  resources.rc  test  vcpkg.json
include/: BitmapHandler.hpp  ConeShape3D.hpp  Cube.hpp  Cube3D.hpp  CubeGenerated.hpp  CubeLightVerts.hpp  CubeModel3D.hpp  CubeShape3D.hpp  CubeSmooth3D.hpp  Engine.hpp  EngineManager.hpp  GameObject.hpp  Initializer.hpp  InputMap.hpp  ModelLoader.hpp  ModelShape3D.hpp  ObjectManager.hpp  Observer.hpp  Plane3D.hpp  PrimitiveShape3D.hpp  Shape3D.hpp  SolidPlane3D.hpp  SoundHandler.hpp  SphereShape3D.hpp  TexturedModelShape3D.hpp  TexturedPlane3D.hpp  TorusShape3D.hpp  TransformableObject.hpp  UpdatableObject.hpp
include/ext/: objloader.hpp  vboindexer.hpp
include/game/: ColoredPlane3D.hpp  FallingBoulder.hpp  GameObject.hpp  GameScene.hpp  MenuScene.hpp  Player.hpp  PlayerController.hpp  Spike.hpp
include/util/: Shader.hpp
src/: BitmapHandler.cpp  Cube.cpp  CubeLightVerts.cpp  Engine.cpp  GeneratedModelLoader.cpp  InputMap.cpp  ModelLoader.cpp  ModelShape3D.cpp  Observer.cpp  PrimitiveShape3D.cpp  Shape3D.cpp  SolidPlane3D.cpp  SoundHandler.cpp  TexturedModelShape3D.cpp  TransformableObject.cpp  main.cpp  mainpage.dox
src/ext/: objloader.cpp  vboindexer.cpp
src/game/: FallingBoulder.cpp  GameScene.cpp  MenuScene.cpp  Player.cpp  PlayerController.cpp  Spike.cpp
src/shader/: SimpleShader.vert
src/util/: Shader.cpp
